# q-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml
api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
api/app/: __init__.py  config.py  crypto.py  db.py  deps_auth.py  logging.py  main.py  schemas.py  seed.py  ws.py
api/app/models/: __init__.py  agent_device.py  audit.py  claude_credentials.py  claude_usage.py  comment.py  execution.py  knowledge.py  linked.py  project.py  project_config.py  provider.py  provider_connection.py  (+6 more)
api/migrations/: env.py  script.py.mako
api/scripts/: import_sqlite_to_postgres.py
api/tests/: conftest.py  test_activity.py  test_adapters.py  test_agent_api.py  test_agent_device_service.py  test_agent_explore.py  test_ai_service.py  test_ai_usage.py  test_audit.py  test_audit_wiring.py  test_auth.py  test_automation.py  test_claude_creds.py  test_cli_cache.py  test_clone_shared_project.py  test_comment_report_creds.py  test_composite_unique_key_owner.py  test_config_scoping.py  test_connections.py  test_evidence_annotate.py  test_execution.py  test_exploration_agent.py  test_exploration_observer.py  test_explore_api.py  test_heal_agent.py  test_knowledge.py  test_linked.py  test_member_mgmt.py  test_migration_adoption.py  test_model_selection.py  test_ownership.py  test_placeholder_gate.py  test_playwright_runner_heal_kb.py  test_project_config.py  test_project_repos.py  test_prompts.py  test_providers_api.py  test_publish.py  test_repo_service.py  test_reports.py  (+13 more)
(+401 files in other folders)
