[project]
name = "q-agent-api"
version = "0.1.0"
description = "Q-Agent — local-first AI QA Operating System (backend)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "cryptography>=44.0.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.20",
    "websockets>=14.1",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "ruff>=0.8.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
